--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0" />
-    <link rel="stylesheet" href="css/all.css">
-  </head>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0" />
+  <link rel="stylesheet" href="css/all.css">
+</head>
 
 <body>
   <nav class="navbar">
@@ -57,7 +59,7 @@
   </div>
 
   <div class="section1 pt-6 pb-6">
-    <div class="box2">
+    <div class="box2 container">
       <h2>用專業的心，做專業的事</h2>
       <div class="row ">
         <div class="col-lg-3 col-sm-6 ">
@@ -170,260 +172,139 @@
     </div>
   </div>
 
-  <!-- <div class="card">
-    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/index-bg.png?raw=true"
-      class="card-img" alt="...">
-    <div class="card-img-overlay section3">
-      <h2>聯名設計鏡框</h2>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-sm-1 pd0">
-            <img
-              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1.png?raw=true"
-              class="card-img2" alt="">
-            <h5 class="roboto-black-italic DY">DOUBLE A+</h5>
-          </div>
-
-          <div class="col-lg-6 col-sm-1 pd0">
-            <img
-              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-2.png?raw=true"
-              class="card-img2" alt="">
-            <h5 class="roboto-black-italic DY">YOUTH</h5>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <!-- <div class="section4 pt-6 pb-6">
+  <div class="section4 pt-6 pb-6">
+    <h2>顧客推薦</h2>
     <div class="container">
-      <h2>顧客推薦</h2>
       <div class="row">
-        <div class="col-lg-3 col-sm-6">
-          <img class="card-img" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true">
-            <div class="pic-4 ">
+        <div class=" col-12 col-lg-3 col-sm-6 ">
+          <div class="pic-4">
+            <img class="pic-4-img"
+              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true">
+              <div class="card-t">
             <h6>Jessy</h6>
             <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-            <span>2021/06/20</span>
-            </div>
-        </div>
-
-        <div class="col-lg-3 col-sm-6 pic-4">
-          <img
-            src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true">
-          <h6>Jessy</h6>
-          <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-          <span>2021/06/20</span>
-        </div>
-        <div class="col-lg-3 col-sm-6 pic-4">
-          <img
-            src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true">
-          <h6>Jessy</h6>
-          <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-          <span>2021/06/20</span>
-        </div>
-        <div class="col-lg-3 col-sm-6 pic-4">
-          <img
-            src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true">
-          <h6>Jessy</h6>
-          <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-          <span>2021/06/20</span>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <!-- 尚未更改rwd版本
-  <div class="section4 pt-6 pb-6">
-    <div class="box3">
-      <h2>顧客推薦</h2>
-      <div class="row pic4">
-              <div class="col-lg-3 col-sm-6 pic4-1">
-                <div class="card">
-                  <img
-                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true">
-                  <h6>Jessy</h6>
-                  <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-                  <span>2021/06/20</span>
-                </div>
-              </div>
-              <div class="col-lg-3 col-sm-6 pic4-1">
-                <div class="card">
-                  <img
-                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true">
-                  <h6>Jessy</h6>
-                  <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-                  <span>2021/06/20</span>
-                </div>
-              </div>
-              <div class="col-lg-3 col-sm-6 pic4-1">
-              <div class="card">
-                <img
-                  src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true">
-                <h6>Jessy</h6>
-                <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-                <span>2021/06/20</span>
-              </div>
-              </div>
-              <div class="col-lg-3 col-sm-6 pic4-1">
-                <div class="card">
-                  <img
-                    src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true">
-                  <h6>Jessy</h6>
-                  <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-                  <span>2021/06/20</span>
-                </div>
-              </div>
+          </div>
+            <div class="date">
+              <p>2021/06/20</P>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>         -->
-
-  <div class="section4 pt-6 pb-6">
-      <h2>顧客推薦</h2>
-      <div class="container">
-      <div class="row">
-        <div class="col-lg-3 col-sm-6 pic-4">
-          <img class="pic-4-img" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true">
-          <h6>Jessy</h6>
-          <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-          <div class="date"><p>2021/06/20</P></div>
-        </div>
-        <div class="col-lg-3 col-sm-6 pic-4">
-          <img class="pic-4-img" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-2.png?raw=true">
+        <div class=" col-12 col-lg-3 col-sm-6 ">
+          <div class="pic-4">
+            <img class="pic-4-img" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-2.png?raw=true">
+            <div class="card-t">
           <h6>凱倫</h6>
           <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
+            </div>
           <div class="date"><p>2021/04/18</P></div>
-        </div>
-        <div class="col-lg-3 col-sm-6 pic-4">
-          <img class="pic-4-img" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-3.png?raw=true">
-          <h6>悠悠</h6>
-          <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
-          <div class="date"><p>2020/12/25</P></div>
-        </div>
-        <div class="col-lg-3 col-sm-6 pic-4">
-          <img class="pic-4-img" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-4.png?raw=true">
-          <h6>Kyuan</h6>
-          <p>服務很好，品質沒有任何問題，非常喜歡。</p>
-          <div class="date"><p>2020/10/31</P></div>
-        </div>
-      </div>
-    </div>
-  </div>
-     
-
-  <!-- 手切版本
-  <div class="section4 pt-6 pb-6">
-    <div class="box3">
-      <h2>顧客推薦</h2>
-      <div class="pic4">
-        <div class="pic4-1">
-          <img
-            src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true">
-          <h6>Jessy</h6>
-          <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-          <span>2021/06/20</span>
-        </div>
-        <div class="pic4-1">
-          <img
-            src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-2.png?raw=true">
-          <h6>凱倫</h6>
-          <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
-          <span>2021/04/18</span>
-        </div>
-        <div class="pic4-1">
-          <img
-            src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-3.png?raw=true">
-          <h6>悠悠</h6>
-          <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
-          <span>2020/12/25</span>
-        </div>
-        <div class="pic4-1">
-          <img
-            src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-4.png?raw=true">
-          <h6>Kyuan</h6>
-          <p>服務很好，品質沒有任何問題，非常喜歡。</p>
-          <span>2020/10/31</span>
-        </div>
-      </div>
-    </div> -->
-
-  <div class="section5 pt-6 pb-6">
-    <div class="box3 box4">
-      <h2>聯絡我們</h2>
-      <p>我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。
-      </p>
-      <form class="row">
-        <div class="col-12">
-          <label for="inputAddress" class="form-label">姓名</label>
-          <input type="text" class="form-control" id="inputAddress" placeholder="陳小明">
-
-          <label for="inputAddress" class="form-label">聯絡電話</label>
-          <input type="text" class="form-control" id="inputAddress" placeholder="0912-345-678">
-
-          <label for="inputAddress" class="form-label">電子郵件</label>
-          <input type="text" class="form-control" id="inputAddress" placeholder="example@email.com">
-
-          <label for="inputAddress2" class="form-label">意見反應</label>
-          <input type="text" class="form-control" id="inputAddress2" placeholder="請輸入您的意見">
-        </div>
-        <div class="col-12">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck">
-            <label class="form-check-label" for="gridCheck">
-              我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
-            </label>
           </div>
         </div>
-        <div class="check">
-            <a href="#">確認送出</a>
+        <div class=" col-12 col-lg-3 col-sm-6 ">
+          <div class="pic-4">
+            <img class="pic-4-img" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-3.png?raw=true">
+            <div class="card-t">
+          <h6>悠悠</h6>
+          <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
         </div>
-      </form>
-
-    </div>
-
-  </div>
-
-
-  <div class="footer">
-    <div class="container">
-      <div class="header">
-        <ul class="box6-1">
-          <li>首頁</li>
-          <li>系列鏡框</li>
-          <li>門市據點</li>
-          <li>部落格</li>
-          <li>常見問題</li>
-        </ul>
-        <div class="box6-2">
-          <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true" alt="">
-          <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true" alt="">
-          <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true" alt="">
+          <div class="date"><p>2020/12/25</P></div>
+          </div>
+        </div>
+        <div class=" col-12 col-lg-3 col-sm-6 ">
+          <div class="pic-4">
+            <img class="pic-4-img" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-4.png?raw=true">
+          <div class="card-t">
+          <h6>Kyuan</h6>
+          <p>服務很好，品質沒有任何問題，非常喜歡。</p>
+          </div>
+          <div class="date"><p>2020/10/31</P></div>
+          </div>
         </div>
       </div>
-    <div class="tel">
-      <span class="material-symbols-outlined">call</span>
-      <h5>0800-000-000</h5>
-    </div>  
-    <div class="tel">
-      <span class="material-symbols-outlined">mail</span>
-      <h5>glasses@business.com</h5>
-    </div>  
+    </div>
 
-    <div class="footer-1">
-      <p class="one">Copyright © 2020 Glasses.All rights reserved.</p>
-      <div class="two">
-        <p>隱私權政策</p>
-        <p>服務條款</p>
+
+ 
+    <div class="section5 pt-6 pb-6">
+      <div class="box3 box4">
+        <h2>聯絡我們</h2>
+        <p>我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。
+        </p>
+        <form class="row">
+          <div class="col-12">
+            <label for="inputAddress" class="form-label">姓名</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="陳小明">
+
+            <label for="inputAddress" class="form-label">聯絡電話</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="0912-345-678">
+
+            <label for="inputAddress" class="form-label">電子郵件</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="example@email.com">
+
+            <label for="inputAddress2" class="form-label">意見反應</label>
+            <input type="text" class="form-control" id="inputAddress2" placeholder="請輸入您的意見">
+          </div>
+          <div class="col-12">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="gridCheck">
+              <label class="form-check-label" for="gridCheck">
+                我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
+              </label>
+            </div>
+          </div>
+            <a class="check" href="#">確認送出</a>
+          </div>
+        </form>
+
       </div>
-    </div>    
 
     </div>
-    </div>
 
-  </div>
+
+    <div class="footer">
+      <div class="container ">
+        <div class="header">
+          <div class="box6-1">
+            <ul>
+              <li>首頁</li>
+              <li>系列鏡框</li>
+              <li>門市據點</li>
+              <li>部落格</li>
+              <li>常見問題</li>
+            </ul>
+            <div class="tel">
+              <span class="material-symbols-outlined">call</span>
+              <h5>0800-000-000</h5>
+            </div>
+            <div class="tel">
+              <span class="material-symbols-outlined">mail</span>
+              <h5>glasses@business.com</h5>
+            </div>
+          </div>
+          <div class="box6-2">
+            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true"
+              alt="">
+            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true"
+              alt="">
+            <img
+              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true"
+              alt="">
+            </div>
+
+          </div>
+        </div>
+
+
+        <div class="footer-1">
+          <p class="one">Copyright © 2020 Glasses.All rights reserved.</p>
+          <div class="two">
+            <p>隱私權政策</p>
+            <p class="two-2">服務條款</p>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
 
 </body>
 
